src/objects/Promo_Email__c.object
<CustomObject>
    <description>the promocode can be sent to one specific email/user or more more than one.
effective and expiration dates tell when the promocode is active</description>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <label>Attendee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>I_Used_Count__c</fullName>
        <description>Used count at individual level of the promotion code. starts from 0 goes up to max count.</description>
        <label>I Used Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipName>Promo_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BLN Promo Email</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Promo Email Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Promo Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>